traces/bug_578.txt
src/medit/inout_popenbinaire.c:769: error: DEAD_STORE
  The value written to &iord (type int) is never used.
Showing all 1 steps of the trace


src/medit/inout_popenbinaire.c:769:2: Write of unused value
767.   	for (i=0; i<3; i++)
768.   	  mesh->sol[k].m[i] = m[i] = fbuf[off+i];
769.   	iord = eigen2(m,lambda,vp);
        ^
770.   	mesh->sol[k].bb = min(lambda[0],lambda[1]);
771.   	if ( mesh->sol[k].bb < mesh->bbmin )  mesh->bbmin = mesh->sol[k].bb;
